added call button class

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
@@ -159,7 +159,7 @@
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
@@ -194,7 +194,7 @@
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
@@ -229,7 +229,7 @@
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
@@ -264,7 +264,7 @@
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
@@ -301,7 +301,7 @@
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
@@ -336,7 +336,7 @@
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
@@ -371,7 +371,7 @@
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
@@ -408,7 +408,7 @@
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
