added hover effect on buttons and add call button event and alert

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div
               class="coin flex items-center gap-[10px] bg-[#41ff6b1a] justify-center rounded-[50px] p-3 inter"
             >
-              <span class="text-[16px] font-black">100</span>
+              <span id="coin-count" class="text-[16px] font-black">100</span>
               <img class="w-[25%]" src="./assets/coin.png" alt="" />
             </div>
             <div
@@ -93,7 +93,7 @@
         <div
           class="md:w-[75%] grid grid-cols-1 md:grid-cols-3 gap-3 md:gap-[30px]"
         >
-          <div class="bg-white p-8 rounded-xl shadow-md">
+          <div class="bg-white p-8 rounded-xl shadow-md card-service">
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
@@ -119,18 +119,18 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md">
+          <div class="bg-white p-8 rounded-xl shadow-md card-service">
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/police.png" alt="" />
@@ -154,18 +154,18 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md">
+          <div class="bg-white p-8 rounded-xl shadow-md card-service">
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/fire-service.png" alt="" />
@@ -189,18 +189,18 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md">
+          <div class="bg-white p-8 rounded-xl shadow-md card-service">
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/ambulance.png" alt="" />
@@ -224,18 +224,18 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md">
+          <div class="bg-white p-8 rounded-xl shadow-md card-service">
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
@@ -259,18 +259,18 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md">
+          <div class="bg-white p-8 rounded-xl shadow-md card-service">
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
@@ -296,18 +296,18 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md">
+          <div class="bg-white p-8 rounded-xl shadow-md card-service">
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
@@ -331,18 +331,18 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md">
+          <div class="bg-white p-8 rounded-xl shadow-md card-service">
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
@@ -366,18 +366,18 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md">
+          <div class="bg-white p-8 rounded-xl shadow-md card-service">
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
@@ -403,12 +403,12 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg"
+                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
@@ -423,7 +423,7 @@
             </div>
             <div class="history-btn">
               <button
-                class="btn px-6 py-6 bg-[#00A63E] rounded-[50px] text-[16px] font-semibold text-white inter border-none"
+                class="btn px-6 py-6 bg-[#00A63E] rounded-[50px] text-[16px] font-semibold text-white inter border-none hover:bg-[#7575758f] hover:text-white"
               >
                 Clear
               </button>
