--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <p
                 class="text-[16px] font-semibold text-white flex items-center gap-[10px] justify-center"
               >
-                <span>0</span>
+                <span id="copy-count-total">0</span>
                 <span>Copy</span>
               </p>
             </div>
@@ -86,9 +86,9 @@
         </div>
       </section>
     </header>
-    <main>
+    <main class="bg-[#F5FFF6]">
       <div
-        class="flex flex-col md:flex md:flex-row gap-2 md:gap-[30px] px-2 md:px-[60px] pt-[60px] pb-[90px] bg-[#F5FFF6]"
+        class="max-w-[1920px] mx-auto flex flex-col md:flex md:flex-row gap-2 md:gap-[30px] px-2 md:px-[60px] pt-[60px] pb-[90px]"
       >
         <div
           class="md:w-[75%] grid grid-cols-1 md:grid-cols-3 gap-3 md:gap-[30px]"
@@ -119,7 +119,7 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
@@ -154,7 +154,7 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
@@ -189,7 +189,7 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
@@ -224,7 +224,7 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
@@ -259,7 +259,7 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
@@ -296,7 +296,7 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
@@ -331,7 +331,7 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
@@ -366,7 +366,7 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
@@ -403,7 +403,7 @@
               class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
             >
               <button
-                class="btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
@@ -423,12 +423,15 @@
             </div>
             <div class="history-btn">
               <button
+                id="clear-btn"
                 class="btn px-6 py-6 bg-[#00A63E] rounded-[50px] text-[16px] font-semibold text-white inter border-none hover:bg-[#7575758f] hover:text-white"
               >
                 Clear
               </button>
             </div>
           </div>
+
+          <div id="history-card"></div>
         </div>
       </div>
     </main>
