--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
         <div
           class="md:w-[75%] grid grid-cols-1 md:grid-cols-3 gap-3 md:gap-[30px]"
         >
-          <div class="bg-white p-8 rounded-xl shadow-md card-service">
+          <div
+            class="bg-white p-3 xl:p-8 rounded-xl shadow-md card-service flex flex-col"
+          >
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
@@ -116,21 +118,23 @@
               >
             </div>
             <div
-              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 mt-auto"
             >
               <button
-                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-3 border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white flex-1"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-3 rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white flex-1"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md card-service">
+          <div
+            class="bg-white p-3 xl:p-8 rounded-xl shadow-md card-service flex flex-col"
+          >
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/police.png" alt="" />
@@ -151,21 +155,23 @@
               >
             </div>
             <div
-              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 mt-auto"
             >
               <button
-                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-3 flex-1 border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-3 flex-1 rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md card-service">
+          <div
+            class="bg-white p-3 xl:p-8 rounded-xl shadow-md card-service flex flex-col"
+          >
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/fire-service.png" alt="" />
@@ -186,21 +192,23 @@
               >
             </div>
             <div
-              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 mt-auto"
             >
               <button
-                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-3 flex-1 border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-3 flex-1 rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md card-service">
+          <div
+            class="bg-white p-3 xl:p-8 rounded-xl shadow-md card-service flex flex-col"
+          >
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/ambulance.png" alt="" />
@@ -221,21 +229,23 @@
               >
             </div>
             <div
-              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 mt-auto"
             >
               <button
-                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-3 flex-1 border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-3 flex-1 rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md card-service">
+          <div
+            class="bg-white p-3 xl:p-8 rounded-xl shadow-md card-service flex flex-col"
+          >
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
@@ -256,21 +266,23 @@
               >
             </div>
             <div
-              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 mt-auto"
             >
               <button
-                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-3 flex-1 border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-3 flex-1 rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md card-service">
+          <div
+            class="bg-white p-3 xl:p-8 rounded-xl shadow-md card-service flex flex-col"
+          >
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
@@ -293,21 +305,23 @@
               >
             </div>
             <div
-              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 mt-auto"
             >
               <button
-                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-3 flex-1 border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-3 flex-1 rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md card-service">
+          <div
+            class="bg-white p-3 xl:p-8 rounded-xl shadow-md card-service flex flex-col"
+          >
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
@@ -328,21 +342,23 @@
               >
             </div>
             <div
-              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 mt-auto"
             >
               <button
-                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-3 flex-1 border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-3 flex-1 rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md card-service">
+          <div
+            class="bg-white p-3 xl:p-8 rounded-xl shadow-md card-service flex flex-col"
+          >
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
@@ -363,21 +379,23 @@
               >
             </div>
             <div
-              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 mt-auto"
             >
               <button
-                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-3 flex-1 border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-3 flex-1 rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
             </div>
           </div>
-          <div class="bg-white p-8 rounded-xl shadow-md card-service">
+          <div
+            class="bg-white p-3 xl:p-8 rounded-xl shadow-md card-service flex flex-col"
+          >
             <div class="main-icon flex justify-between items-center mb-4">
               <div class="w-16 p-[14px] bg-[#FFE3E2] rounded-[16px]">
                 <img src="./assets/emergency.png" alt="" />
@@ -400,15 +418,15 @@
               >
             </div>
             <div
-              class="card-btn flex flex-col md:flex md:flex-row gap-2 items-center"
+              class="card-btn flex flex-col md:flex md:flex-row gap-2 mt-auto"
             >
               <button
-                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-[60px] border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
+                class="copy-btn btn bg-white shadow-none text-[16px] text-[#5C5C5C] font-normal roboto py-3 px-3 flex-1 border-[1px] border-[#D4D6D5] rounded-lg hover:bg-black hover:text-white"
               >
                 <i class="fa-regular fa-copy"></i>Copy
               </button>
               <button
-                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-[60px] rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
+                class="call-btn btn bg-[#00A63E] text-white border-none py-3 px-3 flex-1 rounded-lg text-[16px] font-normal roboto hover:bg-[#7575758f] hover:text-white"
               >
                 <i class="fa-solid fa-phone"></i>Call
               </button>
