fixed responive of call history section

--- a/index.html
+++ b/index.html
@@ -434,15 +434,19 @@
           </div>
         </div>
         <div class="w-full md:w-[25%] bg-white rounded-xl shadow-md">
-          <div class="flex justify-between items-center p-6 mb-4">
+          <div
+            class="flex justify-between items-center p-2 xl:px-4 pt-6 mx-2 xl:mx-6 mb-4"
+          >
             <div class="history-description flex items-center gap-2">
               <i class="fa-regular fa-clock text-[#5C5C5C]"></i>
-              <h3 class="roboto text-[20px] font-medium">Call History</h3>
+              <h3 class="roboto text-[16px] xl:text-[20px] font-medium">
+                Call History
+              </h3>
             </div>
             <div class="history-btn">
               <button
                 id="clear-btn"
-                class="btn px-6 py-6 bg-[#00A63E] rounded-[50px] text-[16px] font-semibold text-white inter border-none hover:bg-[#7575758f] hover:text-white"
+                class="btn px-3 py-2 xl:px-6 xl:py-6 bg-[#00A63E] rounded-[50px] text-[16px] font-semibold text-white inter border-none hover:bg-[#7575758f] hover:text-white"
               >
                 Clear
               </button>
