fixed nav bar button responive and paddings

--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
             </div>
           </div>
           <div
-            class="flex flex-col gap-4 md:flex-row md:gap-5 justify-center items-center"
+            class="flex gap-4 md:flex-row md:gap-5 justify-center items-center"
           >
             <div
-              class="heart flex items-center gap-[10px] bg-[#41ff6b1a] justify-center rounded-[50px] p-3 inter"
+              class="heart flex flex-1 items-center gap-[10px] bg-[#41ff6b1a] justify-center rounded-[50px] p-3 inter"
             >
               <span id="heart-Total" class="text-[16px] font-black">0</span>
               <img class="w-[25%]" src="./assets/heart.png" alt="" />
             </div>
             <div
-              class="coin flex items-center gap-[10px] bg-[#41ff6b1a] justify-center rounded-[50px] p-3 inter"
+              class="coin flex flex-1 items-center gap-[10px] bg-[#41ff6b1a] justify-center rounded-[50px] p-3 inter"
             >
               <span id="coin-count" class="text-[16px] font-black">100</span>
               <img class="w-[25%]" src="./assets/coin.png" alt="" />
             </div>
             <div
-              class="copy-count flex bg-[#00a63e] rounded-[50px] px-9 py-4 inter justify-center"
+              class="copy-count flex flex-1 bg-[#00a63e] rounded-[50px] p-3 lg:px-5 lg:py-4 inter justify-center"
             >
               <p
                 class="text-[16px] font-semibold text-white flex items-center gap-[10px] justify-center"
