--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
     </header>
     <main class="bg-[#F5FFF6]">
       <div
-        class="max-w-[1920px] mx-auto flex flex-col md:flex md:flex-row gap-2 md:gap-[30px] px-2 md:px-[60px] pt-[60px] pb-[90px]"
+        class="max-w-[1920px] mx-auto flex flex-col-reverse md:flex md:flex-row lg:gap-[30px] gap-4 px-2 lg:px-[60px] pt-[60px] pb-[90px]"
       >
         <div
-          class="md:w-[75%] grid grid-cols-1 md:grid-cols-3 gap-3 md:gap-[30px]"
+          class="md:w-[75%] grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 gap-4 lg:gap-[30px]"
         >
           <div
             class="bg-white p-3 xl:p-8 rounded-xl shadow-md card-service flex flex-col"
