--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         class="max-w-[1920px] mx-auto flex flex-col-reverse md:flex md:flex-row lg:gap-[30px] gap-4 px-2 lg:px-[60px] pt-[60px] pb-[90px]"
       >
         <div
-          class="md:w-[75%] grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 gap-4 lg:gap-[30px]"
+          class="md:w-[75%] grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4 xl:gap-[30px]"
         >
           <div
             class="bg-white p-3 xl:p-8 rounded-xl shadow-md card-service flex flex-col"
