fixed phone numbers font size responsive

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
                 National Emergency
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <h3 class="text-[22px] 2xl:text-[32px] font-bold roboto mb-2">
+                999
+              </h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
                 >All</span
@@ -153,7 +155,9 @@
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
                 Police
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <h3 class="text-[22px] 2xl:text-[32px] font-bold roboto mb-2">
+                999
+              </h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
                 >Police</span
@@ -190,7 +194,9 @@
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
                 Fire Service
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">999</h3>
+              <h3 class="text-[22px] 2xl:text-[32px] font-bold roboto mb-2">
+                999
+              </h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
                 >Fire</span
@@ -227,7 +233,9 @@
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
                 Ambulance
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">1994-999999</h3>
+              <h3 class="text-[22px] 2xl:text-[32px] font-bold roboto mb-2">
+                1994-999999
+              </h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
                 >Health</span
@@ -264,7 +272,9 @@
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
                 Women & Child Helpline
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">109</h3>
+              <h3 class="text-[22px] 2xl:text-[32px] font-bold roboto mb-2">
+                109
+              </h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
                 >Help</span
@@ -303,7 +313,9 @@
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
                 Anti-Corruption
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">106</h3>
+              <h3 class="text-[22px] 2xl:text-[32px] font-bold roboto mb-2">
+                106
+              </h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
                 >Govt.</span
@@ -340,7 +352,9 @@
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
                 Electricity Outage
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">16216</h3>
+              <h3 class="text-[22px] 2xl:text-[32px] font-bold roboto mb-2">
+                16216
+              </h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
                 >Electricity</span
@@ -377,7 +391,9 @@
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
                 Brac
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">16445</h3>
+              <h3 class="text-[22px] 2xl:text-[32px] font-bold roboto mb-2">
+                16445
+              </h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
                 >NGO</span
@@ -416,7 +432,9 @@
               <p class="mb-6 text-[18px] text-[#5C5C5C] font-normal roboto">
                 Bangladesh Railway
               </p>
-              <h3 class="text-[32px] font-bold roboto mb-2">163</h3>
+              <h3 class="text-[22px] 2xl:text-[32px] font-bold roboto mb-2">
+                163
+              </h3>
               <span
                 class="bg-[#F2F2F2] text-[18px] text-[#5C5C5C] font-normal px-4 py-[6px] rounded-full hind"
                 >Travel</span
