added comments on html file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- linked favicon -->
     <link
       rel="shortcut icon"
       href="./favicon/icons8-service-32.png"
@@ -74,6 +76,7 @@
           </div>
         </div>
       </nav>
+      <!-- BANNER SECTION -->
       <section
         class="banner bg-[linear-gradient(to_right,#013223_0%,#006747_50%,#013223_100%)]"
       >
@@ -91,10 +94,12 @@
         </div>
       </section>
     </header>
+    <!-- CARD & CALL HISTORY SECTION -->
     <main class="bg-[#F5FFF6]">
       <div
         class="max-w-[1920px] mx-auto flex flex-col-reverse md:flex md:flex-row lg:gap-[30px] gap-4 px-2 lg:px-[60px] pt-[60px] pb-[90px]"
       >
+        <!-- EMERGENCY CARDS SECTION -->
         <div
           class="md:w-[75%] grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4 xl:gap-[30px]"
         >
@@ -456,6 +461,7 @@
             </div>
           </div>
         </div>
+        <!-- CALL HISTORY SECTION -->
         <div class="w-full md:w-[25%] bg-white rounded-xl shadow-md">
           <div
             class="flex justify-between items-center p-2 xl:px-4 pt-6 mx-2 xl:mx-6 mb-4"
